# icp_ros

icp_ros/: CMakeLists.txt  package.xml
icp_ros/rviz/: pub_initial.rviz
icp_ros/src/: gicp_ros.cpp  gicp_ros_1.cpp
save_pcd/: CMakeLists.txt  package.xml
save_pcd/odom/: odom_data.txt
save_pcd/save_file/: lidar_0.pcd  lidar_1.pcd
save_pcd/save_file/odom/: odom_data.txt
save_pcd/src/: pcd_saver.cpp
