<?xml version="1.0"?>
<package format="2">
  <name>icp_ros</name>
  <version>0.0.1</version>
  <description>Package to perform GICP registration between two PCD files</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
