<?xml version="1.0"?>
<package format="2">
  <name>pcd_saver</name>
  <version>0.0.0</version>
  <description>The lidar_point_cloud package</description>

  <maintainer email="user@todo.todo">TODO: Maintainer</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
